# ratify-protocol

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SPEC.md  bench_verify_test.go  constraints.go  cross_sdk_test.go  crypto.go  fuzz_test.go  go.mod  levers_test.go  providers_test.go  ratify_test.go  receipt_verify.go  scope.go  scope_vocabulary_test.go  streamed_verify.go  types.go  verify.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  new_sdk.yml  protocol_change.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
cmd/ratify/: main.go
cmd/ratify-testvectors/: cross_sdk.go  main.go
cmd/ratify-verifier/: main.go  registry.go  registry_test.go
demos/: README.md
demos/go/: demo.go
demos/python/: demo.py
demos/rust/: Cargo.toml  demo.rs
demos/typescript/: demo.ts  package.json
docs/: AGENT_TO_AGENT.md  ATTRIBUTION.md  BENCHMARKS.md  EXPLAINED.md  LICENSES.md  REGISTRY_SETUP.md  RELEASES.md  ROADMAP.md  SDKS.md  TESTING.md  TEST_PLAN.md  TRANSACTION_RECEIPTS.md
scripts/: check-release-sync.sh  release.sh  test-all.sh
sdks/c/: Cargo.toml  README.md  build.rs  cbindgen.toml
sdks/c/examples/: verify_bundle.c
sdks/c/include/: ratify.h
sdks/c/scripts/: test-raspberry-pi.sh
sdks/c/src/: advanced.rs  lib.rs
sdks/c/tests/: advanced.rs  api.rs  conformance.rs
sdks/go/: README.md
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/ratify_protocol/: __init__.py  canonical.py  constraints.py  crypto.py  scope.py  types.py  verify.py
sdks/python/tests/: test_conformance.py  test_cross_sdk.py  test_levers.py  test_providers.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: canonical.rs  constraints.rs  crypto.rs  lib.rs  receipts.rs  scope.rs  types.rs  verify.rs
sdks/rust/tests/: conformance.rs  cross_sdk.rs  levers.rs  providers.rs
sdks/typescript/: README.md  package-lock.json  package.json  publish.sh  tsconfig.json
sdks/typescript/src/: canonical.ts  constraints.ts  crypto.ts  index.ts  receipts.ts  scope.ts  types.ts  verify.ts
sdks/typescript/test/: conformance.test.ts  cross_sdk.test.ts  levers.test.ts  providers.test.ts
testvectors/v1/: constraint_geo_bbox_antimeridian_inside.json  constraint_geo_bbox_denied.json  constraint_geo_circle_equator_origin.json  constraint_geo_circle_inside.json  constraint_geo_circle_outside.json  constraint_geo_polygon_inside.json  constraint_max_amount_exceeds.json  constraint_max_rate_denied.json  constraint_max_speed_mps_denied.json  constraint_time_window_denied.json  constraint_time_window_wrap_inside.json  constraint_unknown_denied.json  cross_sdk_vectors.json  happy_path_depth_1.json  happy_path_depth_2.json  happy_path_depth_3.json  key_rotation_valid.json  no_expiry_cert.json  presence_represent_allowed.json  reject_bad_challenge_sig.json  reject_broken_chain.json  reject_chain_too_deep.json  reject_challenge_forwarding.json  reject_ed25519_only_corrupted.json  reject_expired.json  reject_future_challenge.json  reject_key_mismatch.json  reject_key_rotation_tampered.json  reject_mldsa65_only_corrupted.json  reject_not_yet_valid.json  reject_presence_sensitive_wildcard.json  reject_scope_escalation_depth_2.json  reject_sensitive_wildcard.json  reject_session_context_mismatch.json  reject_session_token_bad_challenge_sig.json  reject_session_token_expired.json  reject_session_token_tampered.json  reject_session_token_wrong_secret.json  reject_stale_challenge.json  reject_stream_context_unverifiable.json  (+24 more)
