[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratify-protocol"
version = "1.0.0a13"
description = "Delegated-authority proofs for human-agent and agent-agent interactions — Python reference SDK for the Ratify Protocol."
readme = "README.md"
authors = [{name = "Identities AI, Inc.", email = "hello@identities.ai"}]
maintainers = [{name = "Identities AI, Inc.", email = "hello@identities.ai"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ratify", "delegation", "agent", "ed25519", "ml-dsa", "post-quantum", "identity", "ai-agents", "authorization", "cryptography"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=44.0",
    "pqcrypto>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://identities.ai"
Documentation = "https://docs.identities.ai"
Source = "https://github.com/identities-ai/ratify-protocol"
Changelog = "https://github.com/identities-ai/ratify-protocol/blob/main/CHANGELOG.md"
Issues = "https://github.com/identities-ai/ratify-protocol/issues"
Security = "https://github.com/identities-ai/ratify-protocol/blob/main/SECURITY.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]
