[package]
name = "ratify-protocol"
version = "1.0.0-alpha.10"
edition = "2021"
authors = ["Identities AI, Inc. <hello@identities.ai>"]
license = "Apache-2.0"
description = "Cryptographic trust protocol for human-agent and agent-agent interactions — Rust reference SDK."
readme = "README.md"
homepage = "https://identities.ai"
documentation = "https://docs.identities.ai"
repository = "https://github.com/identities-ai/ratify-protocol"
keywords = ["ratify", "delegation", "identity", "post-quantum", "ed25519"]
categories = ["cryptography", "authentication"]

[features]
default = ["std"]
std = ["serde_json"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
fips204 = "0.4.6"
rand_core = { version = "0.6" }
sha2 = "0.10"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
chrono-tz = "0.9"

[dev-dependencies]
serde_json = "1"

[lib]
name = "ratify_protocol"
path = "src/lib.rs"

[[test]]
name = "conformance"
path = "tests/conformance.rs"

[[test]]
name = "providers"
path = "tests/providers.rs"

[[test]]
name = "levers"
path = "tests/levers.rs"

[[test]]
name = "cross_sdk"
path = "tests/cross_sdk.rs"
